[gd_scene load_steps=6 format=2]

[ext_resource path="res://Lamp.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.tscn" type="PackedScene" id=2]
[ext_resource path="res://Maps/1_3.gd" type="Script" id=3]
[ext_resource path="res://BadArea.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21.2128, 96.0021 )

[node name="Main" index="0" instance=ExtResource( 2 )]
script = ExtResource( 3 )

[node name="WallLeft" parent="Environment" index="1"]
position = Vector2( 505, 300 )

[node name="Bed" parent="Environment" index="4"]
visible = true
position = Vector2( 550.25, 286.723 )

[node name="Camera2D" parent="." index="5"]
position = Vector2( 768, 150 )
z_index = 3
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="VBoxContainer" parent="Camera2D" index="0"]
margin_top = 0.0
grow_vertical = 2

[node name="Message" parent="Camera2D/VBoxContainer" index="0"]
margin_top = 0.0
margin_right = 480.0
margin_bottom = 26.0
text = "When stuck in limbo, you must be careful on both sides."

[node name="Instruction" parent="Camera2D/VBoxContainer" index="1"]
margin_top = 30.0
margin_right = 480.0
margin_bottom = 56.0
text = "There is more than meets the eye."

[node name="Extra" parent="Camera2D/VBoxContainer" index="2"]
modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 1, 0, 0, 1 )
margin_top = 60.0
margin_right = 480.0
margin_bottom = 86.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Avoid dangers bellow."

[node name="Lamp" parent="." index="6" instance=ExtResource( 1 )]
position = Vector2( 631.928, 92.941 )

[node name="Lamp2" parent="." index="7" instance=ExtResource( 1 )]
position = Vector2( 399.305, 38.6622 )

[node name="MessageTimer" parent="." index="9"]
wait_time = 2.0

[node name="ExtraTimer" type="Timer" parent="." index="10"]
wait_time = 600.0
one_shot = true
autostart = true

[node name="CameraTween" type="Tween" parent="." index="11"]

[node name="SecondMoveTimer" type="Timer" parent="." index="12"]
wait_time = 2.0
one_shot = true

[node name="BadArea" parent="." index="13" instance=ExtResource( 4 )]
position = Vector2( 830.681, 280.404 )
scale = Vector2( 4.09749, 1.34702 )

[node name="TempArea" type="Area2D" parent="." index="14"]
position = Vector2( 652.677, 253.233 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TempArea" index="0"]
position = Vector2( 45.1125, -49.093 )
shape = SubResource( 1 )
[connection signal="timeout" from="ExtraTimer" to="." method="_on_ExtraTimer_timeout"]
[connection signal="timeout" from="SecondMoveTimer" to="." method="_on_SecondMoveTimer_timeout"]
[connection signal="body_entered" from="TempArea" to="." method="_on_TempArea_body_entered"]
